--- a/bazi_web/index.html
+++ b/bazi_web/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>八字玄机</title>
+    <title>易德八字</title>
   </head>
   <body>
     <div id="app"></div>
