--- a/bazi_web/src/about/agreement.html
+++ b/bazi_web/src/about/agreement.html
@@ -27,7 +27,7 @@
                             <div class="agreement-content">
 
                                 <h3>1. 释义</h3>
-                                <p>本服务条款系由用户与北京易德自在科技有限公司与相关软件与技术服务提供方（在本服务条款中统称为"易德自在"）就北京易德自在科技有限公司所提供的网络服务及其他相关软件与技术服务提供方所提供的技术服务（统称为"服务"）所订立的相关权利义务规范。用户指愿意使用易德自在提供的服务的个人。此份合约描述易德自在向用户提供服务的详细条款。因此，请于注册成为服务用户前，确实详细阅读本服务条款的所有内容，当用户点选同意键或使用任何服务即视为同意并接受本服务条款的所有规范并愿受其约束。用户应当明确：无论事实上是否在注册前认真阅读，只要用户点击"同意"按钮并按照相关注册程序成功注册，用户的行为就已表示用户无条件接受了本协议及北京易德自在科技有限公司所公布的与的各项管理规定，并愿意受其约束。如果发生纠纷，用户不得以未仔细阅读为由实行抗辩。</p>
+                                <p>本服务条款系由用户与易德自在（北京）文化科技有限公司与相关软件与技术服务提供方（在本服务条款中统称为"易德自在"）就易德自在（北京）文化科技有限公司所提供的网络服务及其他相关软件与技术服务提供方所提供的技术服务（统称为"服务"）所订立的相关权利义务规范。用户指愿意使用易德自在提供的服务的个人。此份合约描述易德自在向用户提供服务的详细条款。因此，请于注册成为服务用户前，确实详细阅读本服务条款的所有内容，当用户点选同意键或使用任何服务即视为同意并接受本服务条款的所有规范并愿受其约束。用户应当明确：无论事实上是否在注册前认真阅读，只要用户点击"同意"按钮并按照相关注册程序成功注册，用户的行为就已表示用户无条件接受了本协议及易德自在（北京）文化科技有限公司所公布的与的各项管理规定，并愿意受其约束。如果发生纠纷，用户不得以未仔细阅读为由实行抗辩。</p>
 
                                 <h3>2. 著作权声明</h3>
                                 <p>易德自在所提供的服务的相关著作权、专利权、商标、营业秘密及其它任何所有权或权利，均属易德自在所有。非经易德自在的同意，任何人或用户均不得擅自下载、重制、传输、改作、编辑，否则应负所有法律责任。易德自在拥有向用户提供服务过程中所产生并储存于易德自在服务器中的任何数据信息（包括但不仅限于通行证账号等数据信息）的所有权。</p>
@@ -80,17 +80,17 @@
                                 <p>6.3 用户应了解并同意，易德自在所提供的服务可能因公司本身、其它合作厂商或相关电信业者网络系统软硬件设备的故障、失灵、或因合作方及相关电信工作人员人为操作的疏失而全部或一部分中断、暂时无法使用、迟延或因他人侵入易德自在系统篡改或伪造变造资料等，造成服务的停止或中断者或用户档案缺失，用户不得要求易德自在提供任何的补偿或赔偿。</p>
 
                                 <h3>7. 风险承担</h3>
-                                <p>用户同意使用易德自在所提供的服务是出于用户个人意愿，并愿自负任何风险，包括但不限于其因使用易德自在服务或自行由北京易德自在科技有限公司官方网站下载产品软件或资料图片而导致用户或其所使用的计算机软、硬件的损害，或发生任何资料的流失等。</p>
+                                <p>用户同意使用易德自在所提供的服务是出于用户个人意愿，并愿自负任何风险，包括但不限于其因使用易德自在服务或自行由易德自在（北京）文化科技有限公司官方网站下载产品软件或资料图片而导致用户或其所使用的计算机软、硬件的损害，或发生任何资料的流失等。</p>
 
                                 <h3>8. 责任的免除</h3>
-                                <p>8.1 易德自在就其所提供的服务，不负任何明示或默示的担保责任，而其所提供的服务的稳定、安全、无误及不中断性亦有可能因第6条所述情形而受到影响。用户应自行承担使用执行服务所有的风险及因此可能导致的损害，包括而不限于其因执行线上产品或自行由北京易德自在科技有限公司官方网站下载产品软件或资料图片而导致用户或其所使用的计算机系统非因易德自在主观原因造成的损害，或发生任何资料的流失等。</p>
+                                <p>8.1 易德自在就其所提供的服务，不负任何明示或默示的担保责任，而其所提供的服务的稳定、安全、无误及不中断性亦有可能因第6条所述情形而受到影响。用户应自行承担使用执行服务所有的风险及因此可能导致的损害，包括而不限于其因执行线上产品或自行由易德自在（北京）文化科技有限公司官方网站下载产品软件或资料图片而导致用户或其所使用的计算机系统非因易德自在主观原因造成的损害，或发生任何资料的流失等。</p>
                                 <p>8.2 易德自在对其服务不保证不出现任何程序BUG,并对由此可能产生的问题不承担任何赔偿责任。</p>
 
                                 <h3>9. 赔偿责任的排除及限制</h3>
                                 <p>易德自在对于用户使用其服务或无法使用网络所导致的任何直接、间接、衍生的损害或所失利益不负任何损害赔偿责任。若依法无法完全排除损害赔偿责任时，易德自在的赔偿责任亦以用户就使用服务所支付易德自在的价款为限。</p>
 
                                 <h3>10. 链接</h3>
-                                <p>易德自在在北京易德自在科技有限公司网站的所有网页上所提供的所有链接，可能链接到其它个人、公司或组织的网站，提供该等网站的目的，是便利用户自行搜寻或取得信息，易德自在对于被链接的个人、公司或组织的网站所提供的产品、服务或信息，不担保其真实性、完整性、实时性或可信度、这些个人、公司或组织与易德自在间亦不存在任何雇用、委任、代理、合伙或其它类似的关系。</p>
+                                <p>易德自在在易德自在（北京）文化科技有限公司网站的所有网页上所提供的所有链接，可能链接到其它个人、公司或组织的网站，提供该等网站的目的，是便利用户自行搜寻或取得信息，易德自在对于被链接的个人、公司或组织的网站所提供的产品、服务或信息，不担保其真实性、完整性、实时性或可信度、这些个人、公司或组织与易德自在间亦不存在任何雇用、委任、代理、合伙或其它类似的关系。</p>
 
                                 <h3>11. 易德自在的终止权</h3>
                                 <p>用户应确实遵守本服务条款及有关法律命令的规定。易德自在对于用户是否违反服务条款有最终决定权。若易德自在经相关数据分析认定用户违反服务条款，用户同意易德自在可以随时终止用户的通行证账号及密码使用权。</p>
@@ -104,7 +104,7 @@
                                 <p>13.2 易德自在有权仅根据其判断，单方决定新增、修改、删除、暂停或终止其所提供的全部或部分服务（包括且不限于增加、暂停或终止某个产品的运营），且无需另行个别通知用户，用户不得因此要求任何补偿或赔偿。</p>
 
                                 <h3>14. 广告信息或促销计划</h3>
-                                <p>14.1 易德自在在提供服务过程中可能在有关网站位置上可能刊登商业广告、或其它活动促销的广告。这些内容系广告商或商品服务提供者所为，易德自在仅是刊登内容的媒介。用户通过北京易德自在科技有限公司官方网站或其所链接的网站所购买的服务或商品，其交易行为仅存于用户与该商品或服务的提供者之间，与易德自在无关。</p>
+                                <p>14.1 易德自在在提供服务过程中可能在有关网站位置上可能刊登商业广告、或其它活动促销的广告。这些内容系广告商或商品服务提供者所为，易德自在仅是刊登内容的媒介。用户通过易德自在（北京）文化科技有限公司官方网站或其所链接的网站所购买的服务或商品，其交易行为仅存于用户与该商品或服务的提供者之间，与易德自在无关。</p>
                                 <p>14.2 易德自在在提供服务过程亦有可能以电子邮件方式不时向用户发送易德自在的电子期刊或相关市场活动信息，如用户不愿意收到类似电子邮件，可点击邮件中的退订链接，完成退订手续。</p>
 
                                 <h3>15. 服务条款的修改</h3>
@@ -177,9 +177,9 @@
                                 <p>(三)、由于与易德自在链接的其它网站所造成的个人资料泄露及由此而导致的任何法律争议和后果。</p>
                                 <p>(四)、任何个人用户，包括未成年人用户向易德自在提供错误、不完整、不实信息等造成不能正常使用易德自在服务或遭受任何其他损失，概与易德自在无关。</p>
                                 <p>(五)、为了网站的正常运行，需要定期或不定期地对网站进行停机维护，因此类情况而造成的正常服务中断等。</p>
-                                <p>(六)、易德自在服务使用者与易德自在之合约及北京易德自在科技有限公司网站不时颁布和修改的规章、制度、条款等规定的其他免责条款。</p>
+                                <p>(六)、易德自在服务使用者与易德自在之合约及易德自在（北京）文化科技有限公司网站不时颁布和修改的规章、制度、条款等规定的其他免责条款。</p>
                                 <p>本保护隐私条款为易德自在用户服务条款的补充，若有任何与前述和约冲突的地方，以和约为准。</p>
-                                <div class="agreement-copyright">易德自在通行证账号注册协议的修改权、解释权和更新权均属于北京易德自在科技有限公司</div>
+                                <div class="agreement-copyright">易德自在通行证账号注册协议的修改权、解释权和更新权均属于易德自在（北京）文化科技有限公司</div>
                             </div>
 
                         </div>
