--- a/bazi_web/src/about/law.html
+++ b/bazi_web/src/about/law.html
@@ -19,7 +19,7 @@
                     <div class="about-law-wrapper">
 
                         <p>
-                            《易德八字》官方网站是易德八字科技有限公司（以下简称"本公司"）的产品官方网站。
+                            《易德八字》官方网站是易德自在（北京）文化科技有限公司（以下简称"本公司"）的产品官方网站。
                         </p>
 
                         <p>
@@ -31,7 +31,7 @@
 
                         <ol>
                             <li>
-                                <p>本网站上的有关内容（包括但不限于公司名称、商标、产品说明、图片、视频、文章、技术资料以及它们的组合等），其版权归易德八字科技有限公司所有。</p>
+                                <p>本网站上的有关内容（包括但不限于公司名称、商标、产品说明、图片、视频、文章、技术资料以及它们的组合等），其版权归易德自在（北京）文化科技有限公司所有。</p>
                             </li>
                             <li>
                                 <p>本网站上所列示本公司的产品图片、视频、介绍、说明等由本公司提供。但本公司保留对产品设计进行改进的权利。本公司对局部的、非实质性的改进难以在本网站上进行详细的列示，只对重大的和实质性的改进在网站上进行信息的更改。本公司没有义务把以前售出的产品作这些改变。</p></li>
