--- a/bazi_web/src/about/privacy.html
+++ b/bazi_web/src/about/privacy.html
@@ -35,7 +35,7 @@
                     <div class="about-privacy-wrapper">
 
                         <p>
-                            《易德八字》是由北京易德自在科技有限公司开发并运营的一款产品(以下称为“我们”)非常重视您的个人信息保护，您在使用我们的业务平台（包括但不限于平台、小程序、APP等，下同）的产品和服务时，我们可能会收集和使用您的相关信息。
+                            《易德八字》是由易德自在（北京）文化科技有限公司开发并运营的一款产品(以下称为“我们”)非常重视您的个人信息保护，您在使用我们的业务平台（包括但不限于平台、小程序、APP等，下同）的产品和服务时，我们可能会收集和使用您的相关信息。
                             我们将按照法律法规要求，采取相应安全保护措施，并会尽全力保护您的个人信息。
                             我们希望通过本《隐私政策》向您说明，我们如何收集、使用、存储及共享您的个人信息，以及您如何访问、更新、控制和保护您的个人信息。
                         </p>
