--- a/bazi_web/index.html
+++ b/bazi_web/index.html
@@ -2,9 +2,26 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>易德八字</title>
+    <title>易德八字 - 专业八字排盘软件</title>
+      <link rel="shortcut icon" href="/icons/app_icon-192x192.jpg">
+      <!-- 现代浏览器多尺寸支持 -->
+      <link rel="icon" type="image/png" sizes="32x32" href="/icons/app_icon-192x192.png">
+
+      <!-- Apple 设备 -->
+      <link rel="apple-touch-icon" sizes="180x180" href="/icons/app_icon-192x192.jpg">
+
+      <!-- Android 设备 -->
+      <link rel="icon" type="image/png" sizes="192x192" href="/icons/app_icon-192x192.jpg">
+
+      <!-- Web App 配置 -->
+      <meta name="apple-mobile-web-app-title" content="易德自在">
+      <meta name="application-name" content="易德自在">
+      <meta name="msapplication-TileColor" content="#1D953F">
+      <meta name="theme-color" content="#1D953F">
+
+      <meta name="description" content="易德自在 - 专业级八字排盘软件，提供安全可靠的云存储、真太阳时排盘、命理古籍集成等七大功能">
+
   </head>
   <body>
     <div id="app"></div>
