--- a/bazi_web/src/about/law.html
+++ b/bazi_web/src/about/law.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-
 <html lang="zh">
 <head>
     <meta charset="utf-8">
@@ -8,6 +7,96 @@
     <meta name="renderer" content="webkit">
     <meta name="keywords" content="法律声明,易德八字,八字,易德,传统文化,四柱八字,四柱">
     <title>法律声明 - 易德八字官网</title>
+    <style>
+        /* 全局页面左右留白 */
+        body {
+            margin: 0 40px;
+        }
+
+        /* 确保页面主体内容高度足够，以避免页脚遮挡 */
+        body {
+            display: flex;
+            flex-direction: column;
+            min-height: 100vh; /* 使页面至少占满整个视口高度 */
+            margin: 0;
+        }
+
+        .site-main-wrapper {
+            flex: 1; /* 让主要内容区域占据所有可用空间 */
+        }
+
+        /* 页脚包装样式 */
+        .site-footer-wrapper {
+            width: 100%;
+            margin-top: auto; /* 确保页脚被推到底部 */
+        }
+
+        /* 页脚内容样式 */
+        .site-footer {
+            padding: 20px 0;
+            text-align: center;
+        }
+
+        .site-footer nav {
+            margin-bottom: 15px;
+        }
+
+        .site-footer nav a {
+            margin: 0 10px;
+            color: #666;
+            text-decoration: none;
+        }
+
+        .site-footer nav a:hover {
+            color: #333;
+            text-decoration: underline;
+        }
+
+        .footer-center-bottom {
+            margin-top: 15px;
+        }
+
+        .site-copyright p {
+            margin: 5px 0;
+            color: #999;
+            font-size: 14px;
+        }
+
+        .site-copyright a {
+            color: #666;
+            text-decoration: none;
+        }
+
+        .site-copyright a:hover {
+            color: #333;
+            text-decoration: underline;
+        }
+
+        /* ICP备案号与公网备案号之间的空白 */
+        .site-copyright a.mr {
+            margin-right: 20px;
+        }
+
+        /* 响应式设计：小屏幕设备 */
+        @media (max-width: 768px) {
+            body {
+                margin: 0 20px;
+            }
+
+            .site-footer {
+                padding: 15px 0;
+            }
+
+            .site-footer nav a {
+                display: block;
+                margin: 5px 0;
+            }
+
+            .site-copyright p {
+                font-size: 12px;
+            }
+        }
+    </style>
 </head>
 <body class="preload">
 
@@ -101,11 +190,11 @@
             <div class="footer-center-bottom">
                 <div class="site-copyright">
                     <p>
-                        <a href="https://beian.miit.gov.cn/" class="mr" target="_blank">京ICP备XXXXXXX号-1</a>
-                        <a href="https://www.beian.gov.cn/" target="_blank" class="icode">京公网安备XXXXXXXXXX号</a>
+                        <a href="https://beian.miit.gov.cn/" class="mr" target="_blank">京ICP备2025146375号-1</a>
+                        <a href="https://www.beian.gov.cn/" target="_blank" class="icode">京公网安备XXXXXXXXX号</a>
                     </p>
                     <p>
-                        Copyright ©2010-2025 <a href="/" class="red">易德八字</a>. All Right Reserved.
+                        Copyright ©2025-2025 <a href="/" class="red">易德八字</a>. All Right Reserved.
                     </p>
                 </div>
             </div>
@@ -115,80 +204,4 @@
 </div>
 
 </body>
-<style>
-    /* 确保页面主体内容高度足够，以避免页脚遮挡 */
-    body {
-        display: flex;
-        flex-direction: column;
-        min-height: 100vh; /* 使页面至少占满整个视口高度 */
-        margin: 0;
-    }
-
-    .site-main-wrapper {
-        flex: 1; /* 让主要内容区域占据所有可用空间 */
-    }
-
-    /* 页脚包装样式 */
-    .site-footer-wrapper {
-        width: 100%;
-        margin-top: auto; /* 确保页脚被推到底部 */
-    }
-
-    /* 页脚内容样式 */
-    .site-footer {
-        padding: 20px 0;
-        text-align: center;
-    }
-
-    .site-footer nav {
-        margin-bottom: 15px;
-    }
-
-    .site-footer nav a {
-        margin: 0 10px;
-        color: #666;
-        text-decoration: none;
-    }
-
-    .site-footer nav a:hover {
-        color: #333;
-        text-decoration: underline;
-    }
-
-    .footer-center-bottom {
-        margin-top: 15px;
-    }
-
-    .site-copyright p {
-        margin: 5px 0;
-        color: #999;
-        font-size: 14px;
-    }
-
-    .site-copyright a {
-        color: #666;
-        text-decoration: none;
-    }
-
-    .site-copyright a:hover {
-        color: #333;
-        text-decoration: underline;
-    }
-
-    /* 响应式设计：小屏幕设备 */
-    @media (max-width: 768px) {
-        .site-footer {
-            padding: 15px 0;
-        }
-
-        .site-footer nav a {
-            display: block;
-            margin: 5px 0;
-        }
-
-        .site-copyright p {
-            font-size: 12px;
-        }
-    }
-</style>
 </html>
