--- a/bazi_web/src/about/privacy.html
+++ b/bazi_web/src/about/privacy.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-
 <html lang="zh">
 <head>
     <meta charset="utf-8">
@@ -8,40 +7,121 @@
     <meta name="renderer" content="webkit">
     <meta name="keywords" content="隐私条款,易德八字,八字,易德,传统文化,四柱八字,四柱">
     <title>隐私条款 - 易德八字官网</title>
+    <style>
+        /* 全局页面左右留白 */
+        body {
+            margin: 0 40px;
+        }
 
+        /* 确保页面主体内容高度足够，以避免页脚遮挡 */
+        body {
+            display: flex;
+            flex-direction: column;
+            min-height: 100vh; /* 使页面至少占满整个视口高度 */
+            margin: 0;
+        }
+
+        .site-main-wrapper {
+            flex: 1; /* 让主要内容区域占据所有可用空间 */
+        }
+
+        /* 页脚包装样式 */
+        .site-footer-wrapper {
+            width: 100%;
+            margin-top: auto; /* 确保页脚被推到底部 */
+        }
+
+        /* 页脚内容样式 */
+        .site-footer {
+            padding: 20px 0;
+            text-align: center;
+        }
+
+        .site-footer nav {
+            margin-bottom: 15px;
+        }
+
+        .site-footer nav a {
+            margin: 0 10px;
+            color: #666;
+            text-decoration: none;
+        }
+
+        .site-footer nav a:hover {
+            color: #333;
+            text-decoration: underline;
+        }
+
+        .footer-center-bottom {
+            margin-top: 15px;
+        }
+
+        .site-copyright p {
+            margin: 5px 0;
+            color: #999;
+            font-size: 14px;
+        }
+
+        .site-copyright a {
+            color: #666;
+            text-decoration: none;
+        }
+
+        .site-copyright a:hover {
+            color: #333;
+            text-decoration: underline;
+        }
+
+        /* ICP备案号与公网备案号之间的空白 */
+        .site-copyright a.mr {
+            margin-right: 20px;
+        }
+
+        /* 响应式设计：小屏幕设备 */
+        @media (max-width: 768px) {
+            body {
+                margin: 0 20px;
+            }
+
+            .site-footer {
+                padding: 15px 0;
+            }
+
+            .site-footer nav a {
+                display: block;
+                margin: 5px 0;
+            }
+
+            .site-copyright p {
+                font-size: 12px;
+            }
+        }
+
+        /* 隐私条款内容样式 */
+        .about-privacy-wrapper  h4  {font-size:1.15em;margin-top:5em;margin-bottom:1.5em;}
+        .about-privacy-wrapper  h5  {font-size:1em;}
+        .about-privacy-wrapper  ul  {margin-left:.75em;list-style:none;}
+        .about-privacy-wrapper  ul li {line-height:2.5em;}
+        .about-privacy-wrapper  p {padding-left:0;}
+        .about-privacy-wrapper  .p2 {padding-left:2em;}
+        .about-privacy-wrapper  a {color:#158cc3;}
+    </style>
 </head>
 <body class="preload">
-
-
 <div class="site-main-wrapper">
-
     <div class="about-wrapper">
-
-
         <div class="about-container site-width clear-both">
-
             <div class="about-right">
                 <div class="about-content">
-                    <style>
-                        .about-privacy-wrapper  h4  {font-size:1.15em;margin-top:5em;margin-bottom:1.5em;}
-                        .about-privacy-wrapper  h5  {font-size:1em;}
-                        .about-privacy-wrapper  ul  {margin-left:.75em;list-style:none;}
-                        .about-privacy-wrapper  ul li {line-height:2.5em;}
-                        .about-privacy-wrapper  p {padding-left:0;}
-                        .about-privacy-wrapper  .p2 {padding-left:2em;}
-                        .about-privacy-wrapper  a {color:#158cc3;}
-                    </style>
-
                     <div class="about-privacy-wrapper">
-
                         <p>
-                            《易德八字》是由易德自在（北京）文化科技有限公司开发并运营的一款产品(以下称为“我们”)非常重视您的个人信息保护，您在使用我们的业务平台（包括但不限于平台、小程序、APP等，下同）的产品和服务时，我们可能会收集和使用您的相关信息。
+                            《易德八字》是由易德自在（北京）文化科技有限公司开发并运营的一款产品(以下称为"我们")非常重视您的个人信息保护，您在使用我们的业务平台（包括但不限于平台、小程序、APP等，下同）的产品和服务时，我们可能会收集和使用您的相关信息。
                             我们将按照法律法规要求，采取相应安全保护措施，并会尽全力保护您的个人信息。
                             我们希望通过本《隐私政策》向您说明，我们如何收集、使用、存储及共享您的个人信息，以及您如何访问、更新、控制和保护您的个人信息。
                         </p>
 
                         <p>
-                            <strong>本《隐私政策》适用于我们向您提供的相关产品及信息服务（以下简称“服务”），请您在使用服务前</strong>，希望您<strong>仔细阅读并充分理解本《隐私政策》的全部内容</strong>。
+                            <strong>本《隐私政策》适用于我们向您提供的相关产品及信息服务（以下简称"服务"），请您在使用服务前</strong>，希望您<strong>仔细阅读并充分理解本《隐私政策》的全部内容</strong>。
                             您使用或继续使用我们的服务，即意味着您同意我们按照本内容收集、使用、储存及共享您的相关信息。本政策中涉及的专业词汇，我们尽量以简明通俗的表述向您解释，以便于您理解。
                         </p>
 
@@ -69,13 +149,12 @@
                             <li>十、如何联系我们</li>
                         </ul>
 
-
                         <h4>一、我们如何收集和使用您的个人信息</h4>
 
                         <p>个人信息是指以电子或者其他方式记录的能够单独或者与其他信息结合识别特定自然人身份或者反映特定自然人活动情况的各种信息。</p>
                         <p>我们仅会出于本政策所述的以下目的，收集和使用您的个人信息：</p>
 
-                        <p>（一）为更好地为您提供服务，我们将遵循“合法、正当、必要”原则，按照法律法规的规定和您的同意收集您的个人信息，主要包括：</p>
+                        <p>（一）为更好地为您提供服务，我们将遵循"合法、正当、必要"原则，按照法律法规的规定和您的同意收集您的个人信息，主要包括：</p>
 
                         <p><strong>1.您提供的信息</strong></p>
                         <p>您注册成为我们的用户或使用我们的服务时，向我们提供的相关个人信息，包括您的手机号码、账号昵称。如您不提供前述信息，将无法注册成为用户，无法使用相关服务功能。</p>
@@ -131,12 +210,11 @@
                             <li>（11）法律法规规定的其他情形。</li>
                         </ul>
 
-
                         <h4>二、我们如何使用 Cookie 和同类技术</h4>
 
                         <p>（一）Cookie</p>
                         <p>为确保服务能够正常运转，我们会在您的计算机或移动设备上存储名为 Cookie 的小数据文件。Cookie 通常包含标识符、站点名称以及一些号码和字符。借助于 Cookie，我们能够了解您的兴趣偏好及使用习惯。</p>
-                        <p>我们不会将 Cookie 用于本政策所述目的之外的任何用途。您可根据自己的偏好管理或删除 Cookie。您可以清除计算机上保存的所有 Cookie，大部分网络浏览器都设有阻止 Cookie 的功能。但如果您这么做，则需要在每一次访问我们产品时亲自更改用户设置。</p>
+                        <p>我们不会将 Cookie 用于本政策所述目的之外的任何其他用途。您可根据自己的偏好管理或删除 Cookie。您可以清除计算机上保存的所有 Cookie，大部分网络浏览器都设有阻止 Cookie 的功能。但如果您这么做，则需要在每一次访问我们产品时亲自更改用户设置。</p>
                         <p>（二）网站信标和像素标签</p>
                         <p>除 Cookie 外，我们还可能会使用网站信标和像素标签以及其他同类技术。我们向您发送的电子邮件可能含有链接至我们网站内容的点击 URL。如果您点击该链接，我们则会跟踪此次点击，帮助我们了解您的产品或服务偏好并改善客户服务。网站信标通常是一种嵌入到网站或电子邮件中的透明图像。借助于电子邮件中的像素标签，我们能够获知电子邮件是否被打开。如果您不希望自己的活动以这种方式被追踪，则可以随时从我们的寄信名单中退订。</p>
                         <p>（三）Do Not Track（请勿追踪）</p>
@@ -171,12 +249,10 @@
                         <p>（二）存放地域。您的个人信息均储存于中华人民共和国境内。我们不会将上述信息传输至境外，如果我们向境外传输，我们将会遵循法律法规的规定，征求你的自主选择同意。</p>
                         <p>（三）安全保护措施。</p>
 
-                        <p>1. 我们会以“最小化”原则收集、使用、存储和传输用户信息，并通过用户协议和隐私政策告知您相关信息的使用目的和范围。我们会严格按照《网络安全法》《全国人民代表大会常务委员会关于加强网络信息保护的决定》《电信和互联网用户个人信息保护规定》（工业和信息化部令第24号）《电话用户真实身份信息登记规定》（工业和信息化部令第25号）和其他相关法律法规的要求，建立信息安全保障制度，采取技术措施和其他必要措施保护您的个人信息安全。</p>
+                        <p>1. 我们会以"最小化"原则收集、使用、存储和传输用户信息，并通过用户协议和隐私政策告知您相关信息的使用目的和范围。我们会严格按照《网络安全法》《全国人民代表大会常务委员会关于加强网络信息保护的决定》《电信和互联网用户个人信息保护规定》（工业和信息化部令第24号）《电话用户真实身份信息登记规定》（工业和信息化部令第25号）和其他相关法律法规的要求，建立信息安全保障制度，采取技术措施和其他必要措施保护您的个人信息安全。</p>
                         <p>2.我们将运用各种安全技术和程序建立完善的管理制度来保护您的个人信息，以免遭受未经授权的访问、使用或披露。包括使用加密技术确保数据的保密性；使用受信赖的保护机制防止数据遭到恶意攻击；对相关访问进行授权；定期开展安全防护与检测措施；对员工进行数据安全的意识培养和安全能力的培训，加强员工对于保护个人信息重要性的认识。</p>
                         <p>3.请您理解：<strong>互联网环境并非百分之百安全，我们将尽力确保或担保您发送给我们的任何信息的安全性，但由于技术的限制及可能存在的各种恶意手段，即便竭尽所能加强安全措施，也不可能始终保证信息百分之百安全。</strong></p>
                         <p>4.在不幸发生个人信息安全事件后，我们将按照法律法规的要求，及时向您告知：安全事件的基本情况和可能的影响、我们已采取或将要采取的处置措施、您可自主防范和降低风险的建议、对您的补救措施。我们将及时将事件相关情况以邮件、信函、电话的方式告知您，难以逐一告知个人信息主体时，我们会采取合理、有效的方式发布公告。同时，我们还将按照监管部门要求，主动上报个人信息安全事件的处置情况。</p>
-
-
 
                         <h4>五、您如何管理自己的信息</h4>
                         <p>您在使用我们服务的过程中，可以通过查阅、复制、更正、补充、删除等方式来管理您的信息。</p>
@@ -206,16 +282,13 @@
                         <p>您可通过APP或网页端进行注销账号。注销账号之后，我们将停止为您提供产品或服务，并依据您的要求，删除您的个人信息，法律法规另有规定的除外。</p>
                         <p>请您理解，由于技术所限、法律或监管要求，我们可能无法满足您的所有要求，我们会在法律法规规定的期限内进行反馈。同时我们将不断优化产品和服务来保障您的权利。</p>
 
-
                         <h4>六、我们如何保护未成年人的个人信息</h4>
                         <p>1.我们非常重视对未成年人个人信息的保护。若您是14周岁以下的未成年人，在使用我们的服务前，建议您请您的监护人仔细阅读本隐私政策，并事先取得您家长或法定监护人的同意。我们将根据国家相关法律法规的规定保护未成年人的个人信息。</p>
                         <p>2.对于经父母或法定监护人同意而收集未成年人个人信息的情况，我们只会在受到法律允许、父母或监护人明确同意或者保护未成年人所必要的情况下使用或公开披露此信息。</p>
                         <p>3.如果我们发现自己在未事先获得可证实的父母或法定监护人同意的情况下收集了未成年人的个人信息，则会设法尽快删除相关数据。</p>
 
-
                         <h4>七、您的个人信息如何在全球范围转移</h4>
                         <p>原则上，我们在中华人民共和国境内收集和产生的个人信息，将存储在中华人民共和国境内。如果我们向境外传输，我们将会遵循法律法规的规定，征求你的自主选择同意。在此情况下我们会依据本政策以使您的个人信息得到足够的保护。</p>
-
 
                         <h4>八、本政策修订和变更</h4>
                         <p><strong>我们的隐私权政策可能变更，除法律法规或监管规定另有强制性规定外，经调整或变更的内容一经通知或公布后的7日后生效。如您在隐私权政策调整或变更后继续使用我们提供的任一服务或访问相关网站或相关应用程序的，我们相信这代表您已充分阅读、理解并接受修改后的隐私权政策并受其约束。</strong></p>
@@ -232,7 +305,6 @@
                         </ul>
                         <p>我们的任何修改都会将您的满意度置于首位。我们鼓励您在每次使用我们的服务和产品时都查阅我们的隐私政策。</p>
 
-
                         <h4>九、本政策适用范围</h4>
                         <p>请您特别注意：本政策适用于平台运营服务提供者以网站、客户端、小程序、微信公众号以及随技术发展出现的新形态向您提供的各项产品和服务。除本政策说明的相关信息收集使用活动外，本政策不适用于平台用户及其他第三方向您提供的其他服务，其他服务适用其向您另行说明的个人信息收集使用规则。</p>
 
@@ -240,29 +312,15 @@
                         <p>如您对本政策有任何疑问、意见或建议，或者您在管理您的个人信息时遇到任何问题，您可通过平台公示的各类联系方式与我们取得联系，我们会积极进行查证、处理。服务邮箱：ydzzcc@163.com</p>
                         <p style="text-align:right">更新日期：【2025】年【10】月【1】日</p>
                         <p style="text-align:right">生效日期：【2025】年【10】月【1】日</p>
-
-
                     </div>
-
-
                 </div>
-
             </div>
-
         </div>
-
     </div>
-
-
-
-
-
-
 </div>
 
 <div class="site-footer-wrapper">
     <div class="site-footer site-width clear-both">
-
         <div class="footer-center">
             <nav>
                 <a href="/">易德自在首页</a>
@@ -273,95 +331,16 @@
             <div class="footer-center-bottom">
                 <div class="site-copyright">
                     <p>
-                        <a href="https://beian.miit.gov.cn/" class="mr" target="_blank">京ICP备XXXXX号-1</a>
-                        <a href="https://www.beian.gov.cn/" target="_blank" class="icode">京公网安备XXXXXXX号</a>
+                        <a href="https://beian.miit.gov.cn/" class="mr" target="_blank">京ICP备2025146375号-1</a>
+                        <a href="https://www.beian.gov.cn/" target="_blank" class="icode">京公网安备XXXXXXXXX号</a>
                     </p>
                     <p>
-                        Copyright ©2010-2025 <a href="/" class="red">易德八字</a>. All Right Reserved.
+                        Copyright ©2025-2025 <a href="/" class="red">易德自在</a>. All Right Reserved.
                     </p>
                 </div>
             </div>
-
         </div>
     </div>
 </div>
-
 </body>
-
-<style>
-    /* 确保页面主体内容高度足够，以避免页脚遮挡 */
-    body {
-        display: flex;
-        flex-direction: column;
-        min-height: 100vh; /* 使页面至少占满整个视口高度 */
-        margin: 0;
-    }
-
-    .site-main-wrapper {
-        flex: 1; /* 让主要内容区域占据所有可用空间 */
-    }
-
-    /* 页脚包装样式 */
-    .site-footer-wrapper {
-        width: 100%;
-        margin-top: auto; /* 确保页脚被推到底部 */
-    }
-
-    /* 页脚内容样式 */
-    .site-footer {
-        padding: 20px 0;
-        text-align: center;
-    }
-
-    .site-footer nav {
-        margin-bottom: 15px;
-    }
-
-    .site-footer nav a {
-        margin: 0 10px;
-        color: #666;
-        text-decoration: none;
-    }
-
-    .site-footer nav a:hover {
-        color: #333;
-        text-decoration: underline;
-    }
-
-    .footer-center-bottom {
-        margin-top: 15px;
-    }
-
-    .site-copyright p {
-        margin: 5px 0;
-        color: #999;
-        font-size: 14px;
-    }
-
-    .site-copyright a {
-        color: #666;
-        text-decoration: none;
-    }
-
-    .site-copyright a:hover {
-        color: #333;
-        text-decoration: underline;
-    }
-
-    /* 响应式设计：小屏幕设备 */
-    @media (max-width: 768px) {
-        .site-footer {
-            padding: 15px 0;
-        }
-
-        .site-footer nav a {
-            display: block;
-            margin: 5px 0;
-        }
-
-        .site-copyright p {
-            font-size: 12px;
-        }
-    }
-</style>
 </html>
