--- a/bazi_web/src/about/law.html
+++ b/bazi_web/src/about/law.html
@@ -191,7 +191,8 @@
                 <div class="site-copyright">
                     <p>
                         <a href="https://beian.miit.gov.cn/" class="mr" target="_blank">京ICP备2025146375号-1</a>
-                        <a href="https://www.beian.gov.cn/" target="_blank" class="icode">京公网安备XXXXXXXXX号</a>
+                        <img class="footer-auth-icon" src="/icons/gongan.png">
+                        <a href="https://beian.mps.gov.cn/#/query/webSearch?code=11010502057604" rel="noreferrer" target="_blank">京公网安备11010502057604号</a>
                     </p>
                     <p>
                         Copyright ©2025-2025 <a href="/" class="red">易德八字</a>. All Right Reserved.
